--- a/config/components/manager/kustomization.yaml
+++ b/config/components/manager/kustomization.yaml
@@ -13,5 +13,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: us-central1-docker.pkg.dev/k8s-staging-images/kueue/kueue
-  newTag: main
+  newName: quay.io/kryanbeane/kueue
+  newTag: v0.14.0-devel-232-gf7a52aaf5-dirty
